--- a/package.json
+++ b/package.json
@@ -6,5 +6,8 @@
   "main": "index.js",
   "scripts": {
     "start": "http-server -p 4444"
+  },
+  "dependencies": {
+    "http-server": "^13.0.2"
   }
 }
