--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "start": "http-server -p 4444"
+    "start": "http-server -p 4444 -c-1"
   },
   "dependencies": {
     "http-server": "^13.0.2"
